[package]
name = "todorst"
version = "0.1.0"
authors = ["Phusit Somboonyingsuk"]
description = "Unofficial client for Todoist API"
license = "MIT"
repository = "https://github.com/phusitsom/todorst.git"
homepage = "https://github.com/phusitsom/todorst"
keywords = ["todoist", "api"]
readme = "README.md"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
reqwest = "0.11"
maybe-async = "0.2"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.21", features = ["full"] }
tokio-test = "0.4"
